<resources>
    <string name="app_name">SNOOPY</string>
    <string name="title_activity_login">Вхід в SNOOPY</string>
    <string name="toast_minimum_password">Пароль за короткий. Мінімальна довжина 6 символів!</string>
    <string name="toast_auth_failed">Не вдається ввійти! Перевірте, будь ласка, правильність введених даних</string>
    <string name="button_login">ВВІЙТИ</string>
    <string name="button_forgot_password">Забули пароль?</string>
    <string name="button_link_to_register">Зареєструвати нового користувача</string>
    <string name="title_activity_reset_password">Відновлення паролю</string>
    <string name="text_forgot_password">Забули пароль?</string>
    <string name="text_forgot_password1">Нам необхідно Ваша електронна скринька щоб відправити інструкцію по відновленню.</string>
    <string name="toast_user_created">"Готово. Ввійдіть з допомогою Вашого Email: "</string>
    <string name="button_reset_password">Відновити пароль</string>
    <string name="title_activity_signup">Реєстрація</string>
    <string name="button_sign_up">Зареєструвати</string>
    <string name="hint_first_name">ПІБ</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_phone2">Телефон 2</string>
    <string name="hint_email">Електронна скринька</string>
    <string name="hint_date_birth">Дата народження</string>
    <string name="hint_card">Номер картки</string>
    <string name="hint_password">Пароль</string>
    <string name="app_title">SNOOPY</string>
    <string name="app_motto">Грайся та розвивайся</string>
    <string name="button_zvit">Свято</string>
    <string name="button_programs">Програми</string>
    <string name="button_calendar1">Календар</string>
    <string name="button_requisites">Витрати</string>
    <string name="hint_double_press">Натисніть ще раз аби вийти з додатку</string>
    <string name="button_about">Про проект</string>
    <string name="button_calc">Тарифний Калькулятор</string>
    <string name="button_fb">Ми в Facebook</string>
    <string name="phone_call">tel:0681990655</string>
    <string name="title_activity_user">Особистий кабінет</string>
    <string name="text_days">"Робочих\nднів"</string>
    <string name="text_money">Оборот</string>
    <string name="text_master">Майстер\nклас</string>
    <string name="text_bonus">Бонус</string>
    <string name="text_total_salary">Всього за поточний місяць:</string>
    <string name="action_settings">Налаштування</string>
    <string name="title_activity_settings">Ваш аккаунт</string>
    <string name="button_save_changes">Зберегти зміни</string>
    <string name="toast_data_updated">Зміни збережено</string>
    <string name="action_logout">Вийти</string>
    <string name="dialog_logout_title">Вийти з аккаунта</string>
    <string name="dialog_logout_message"> Ви впевнені що бажаєте вийти з аккаунта?</string>
    <string name="button_logout">Вийти з аккаунта</string>
    <string name="title_activity_events">Повідомлення</string>
    <string name="title_activity_report">Свято</string>
    <string name="button_save">Зберегти свято</string>
    <string name="action_edit">Редагувати</string>
    <string name="action_add">Зберегти свято</string>
    <string name="title_activity_calendar">Календар</string>
    <string name="toast_edit_impossible">Редагувати можна тільки сьогоднішній або майбутні свята</string>
    <string name="toast_delete_impossible">Видалити можна тільки сьогоднішній або майбутні свята</string>
    <string name="title_activity_mk">Майстер класи</string>
    <string name="title_activity_cost">Витрати</string>
    <string name="title_activity_notification">Повідомлення</string>
    <string-array name="month_array">
        <item>Січень</item>
        <item>Лютий</item>
        <item>Березень</item>
        <item>Квітень</item>
        <item>Травень</item>
        <item>Червень</item>
        <item>Липень</item>
        <item>Серпень</item>
        <item>Вересень</item>
        <item>Жовтень</item>
        <item>Листопад</item>
        <item>Грудень</item>
    </string-array>
    <string name="dialog_delete_mk_title">Видалити майстер клас</string>
    <string name="dialog_delete_mk_message">Після видалення відновити мастер клас буде неможливо</string>
    <string name="dialog_delete_title">Видалити свято</string>
    <string name="dialog_delete_message">Після видалення відновити свято буде неможливо</string>
    <string name="title_activity_dashboard">"Адмін панель (%1$s ГРН)"</string>
    <string name="hint_date">Дата</string>
    <string name="mk_done">Проведено Майстер Класів: </string>
    <string name="month_prev"><![CDATA[ < ]]></string>
    <string name="toast_report_saved">Свято збережено</string>
    <string name="hint_price">Ціна</string>
    <string name="hint_title2">Тип</string>
    <string name="hint_title1">Назва</string>
    <string name="text_cost_common">Загальні</string>
    <string name="text_cost_mk">На мк</string>
    <string name="text_cost_list">Список витрат</string>
    <string name="action_delete_all">  ВИДАЛИТИ ВСЕ  </string>
    <string name="dialog_cost_delete_title">Видалити витрату</string>
    <string name="dialog_cost_delete_message">Після видалення відновити витрату буде неможливо</string>
    <string name="dialog_cost_delete_all_title">Видалити всі витрати</string>
    <string name="dialog_cost_delete_all_message">Після видалення відновити витрати буде неможливо</string>
    <string name="cant_delete">Неможливо видалити. Видаляти можливо тільки витрати створені Вами</string>
    <string name="cant_delete_all">Неможливо видалити. Ця функція доступна тільки Адміністратору</string>
    <string name="text_date">Дата</string>
    <string name="text_room">Кімната</string>
    <string name="text_all">Всього</string>
    <string name="text_birthdays">Дні Народження</string>
    <string name="text_charts_income">Виручка / 80% / Прибуток</string>
    <string name="text_charts">Чистий прибуток</string>
    <string name="dialog_delete_notification_title">Видалити діалог</string>
    <string name="dialog_delete_notification_message">Після видаленння відновити діалог буде неможливо</string>
    <string name="dialog_about_title">Про програму</string>
    <string name="dialog_about_message">SNOOPY  \nv </string>
    <string name="text_copied">Скопійовано в буфер обміну</string>
    <string name="dialog_report_save_before_close_title">Зберегти зміни</string>
    <string name="dialog_report_save_before_close_text">Ви хочете зберегти зміни у Святі?</string>
    <string name="title_activity_salary">Заробітна плата</string>
    <string name="text_mk">МК</string>
    <string name="text_stavka">Ставка</string>
    <string name="text_percent">Відсотки</string>
    <string name="text_income_">Оборот</string>
    <string name="text_cost_total1">Витрати</string>
    <string name="text_salary">Заробітна плата</string>
    <string name="text_salary_detail_title">Деталі</string>
    <string name="text_salary_condition_title">Умови</string>
    <string name="text_salary_detail_stavka">"Ставка:"</string>
    <string name="text_salary_detail_percent">"Відсоток від обороту:"</string>
    <string name="text_salary_detail_mk1">"МК:"</string>
    <string name="text_salary_detail_bd_children">МК за одну дитину:</string>
    <string name="text_salary_detail_art">"Арт МК:"</string>
    <string name="dialog_salary_title">Введіть значення</string>
    <string name="hint_comment">Добавити Коментар</string>
    <string name="action_clear_report">Очистити</string>
    <string name="action_delete_report">Видалити свято</string>
    <string name="action_yesterday">Вчора</string>
    <string name="action_today">Сьогодні</string>
    <string name="toast_report_deleted">Свято видалено</string>
    <string name="action_go_to_calendar">КАЛЕНДАР</string>
    <string name="toast_report_cleared">Свято очищено</string>
    <string name="hint_time">Час роботи</string>
    <string name="action_new_user">Новий користувач</string>
    <string name="text_friend_list">Колеги</string>
    <string name="button_notebook">Приват Нотатки</string>
    <string name="snack_deleted">Видалено</string>
    <string name="action_plan">План МК</string>
    <string name="action_save">Зберегти</string>
    <string name="title_activity_edit">Редагування</string>
    <string name="title_activity_add">Добавлення</string>
    <string name="hint_description">Детальний опис (не обовязково)</string>
    <string name="mk_k">Кулінарний майстер клас</string>
    <string name="mk_art">Творчий майстер клас</string>
    <string name="mk_updated">Дані обновлено успішно</string>
    <string name="mk_added">МК створено успішно</string>
    <string name="not_added">Діалог створено успішно</string>
    <string name="dialog_mk_edit_text">В тексті є зміни, зберегти їх?</string>
    <string name="dialog_choose_mk">Виберіть МК</string>
    <string name="text_add_photo">Сфотографувати Свято</string>
    <string name="action_delete_mk">Видалити</string>
    <string name="photo_uploading">"Фото загружається. Зачекайте хвильку.."</string>
    <string name="hint_first_date">Перший робочий день</string>
    <string name="photo_uploaded">Фото збережено</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_k">КУЛІНАРНІ</string>
    <string name="tab_t">ТВОРЧІ</string>
    <string name="tab_d">ДОСЛІДИ</string>
    <string name="mk_type_k">Кулінарний майстер клас</string>
    <string name="mk_type_t">Творчий майстер клас</string>
    <string name="mk_type_d">Досліди та експерименти</string>
    <string name="title_activity_mk_plan">Майстер класи</string>
    <string name="title_activity_mk_tab">Майстер класи</string>
    <string name="text_mk_list">Майстер класи</string>
    <string name="text_mk_full">Майстер клас</string>
    <string name="title_activity_mk_item">Майстер клас</string>
    <string name="expand_more">Показати опис</string>
    <string name="text_mk_share">ПОДІЛИТИСЬ</string>
    <string name="toast_mk_not_set">Майстер клас не вказано</string>
    <string name="hint_link">Посилання (http://)</string>
    <string name="text_mk_link">ПОСИЛАННЯ</string>
    <string name="title_activity_about">Про проект</string>
    <string name="text_about_company">
        "Чебурашка КІДС була створена 01,06,2016р.\n"
        "Наша мета:\n"
        "Наша місія:\n"
        "Наша позиція на ринку:\n"

    </string>
    <string name="title_activity_notification_item">Повідомлення</string>
    <string name="hint_short_description">Короткий опис</string>
    <string name="hint_password_one_more">Пароль (ще раз)</string>
    <string name="toast_different_password">Паролі не співпадають</string>
    <string name="text_password_change">Зміна паролю</string>
    <string name="action_change_password">ЗМІНИТИ ПАРОЛЬ</string>
    <string name="text_user_details">Основні дані</string>
    <string name="toast_nothing_to_change">Немає змін в даних</string>
    <string name="button_link">Поділитись</string>
    <string name="hrn_percent">"%1$s відсотків"</string>
    <string name="expense_upload">Загрузити фото</string>
    <string name="hint_child1">Імя першої дитини</string>
    <string name="hint_child2">Імя другої дитини</string>
    <string name="hint_child3">Імя третьої дитини</string>
    <string name="hint_client_description">Опис</string>
    <string name="hint_person">Ім\'я іменинника</string>
    <string name="check_mk">МК</string>
    <string name="check_aqua">Аквагрим</string>
    <string name="check_cinema">Кінотеатр</string>
    <string name="hint_date_celebrating">Дата Святкування ДН:</string>
    <string name="text_kids_count">Кількість дітей: %s</string>
    <string name="shortcut_calendar_short_label">Календар</string>
    <string name="shortcut_calendar_long_label">Перейти в Календар</string>
    <string name="shortcut_report_short_label">Свято</string>
    <string name="shortcut_report_long_label">Перейти в Свято</string>
</resources>