<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.ruslanlyalko.android.snoopyea.ui.ReportActivity">

    <group>
        <item
            android:id="@+id/action_add"
            android:icon="@drawable/ic_action_add"
            android:title="@string/action_add"
            app:showAsAction="ifRoom" />

    </group>

    <group android:id="@+id/first_menu">
        <item
            android:id="@+id/action_today"
            android:title="@string/action_today" />
    </group>

    <group android:id="@+id/second_menu">
        <item
            android:id="@+id/action_clear_report"
            android:title="@string/action_clear_report" />
        <item
            android:id="@+id/action_delete_report"
            android:title="@string/action_delete_report" />
    </group>
</menu>