<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.ui.main.mk.MkEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="280dp">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_photo"
                tools:ignore="ContentDescription" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_upload"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/expense_upload" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividersDark" />

        <EditText
            android:id="@+id/edit_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/hint_title1"
            android:inputType="textCapSentences"
            android:maxLength="20"
            android:padding="@dimen/text_margin"
            android:textSize="@dimen/text_name_size" />

        <TextView
            android:id="@+id/text_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:hint="@string/hint_title2"
            android:maxLength="30"
            android:padding="@dimen/text_margin"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_subtitle_size" />

        <EditText
            android:id="@+id/edit_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/hint_link"
            android:inputType="textUri"
            android:padding="@dimen/text_margin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividersDark" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/hint_description"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="@dimen/text_margin" />

    </LinearLayout>

</ScrollView>
